# containers_practice_itmo

./: .dockerignore  .env-template  .gitignore  README.md  docker-compose.yaml  pyproject.toml
agent/: __init__.py  answer_bot.py
agent/data/: __init__.py  data_raw.txt  demo.py  init_qdrant.py  retriever.py
agent/nodes/: __init__.py  _base.py  conversation_node.py  rag_node.py
backend/: app.py  models.py
docker/backend/: Dockerfile  Dockerfile.bad
docker/frontend/: Dockerfile
docker/qdrant/: Dockerfile  Dockerfile.init
frontend/: app.py  utils.py
k8s/: backend_deploy.yaml  backend_service.yaml  pg_secret.yaml  qdrant_deploy.yaml  qdrant_service.yaml  secret.yaml  volume.yaml
